--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
 - jekyll-remote-theme
+logo: assets/Matthew Bailey - Specsavers - Software Engineering Lead.jpg
 title: Matthew Bailey
 github:
   is_project_page: false
